--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 	<link rel="stylesheet" href="css/general/fullpage.css">
 	<link rel="stylesheet" href="css/general/sprite.svg">
 	<link rel="stylesheet" href="css/general/fullpage.css">
-	<script src="jquery.js"></script>
-	<script src="js/fullpage.js"></script>
-	<script src="https://api-maps.yandex.ru/2.1/?apikey=<b8dd69ed-85e4-41c1-b4e3-bbc7214b176c>&lang=ru_RU" type="text/javascript">
-	</script>
+	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript">
 	<script src="js/map.js"></script>
 	<title>Document</title>
 </head>
