--- a/index.html
+++ b/index.html
@@ -109,9 +109,55 @@
 				<div class="slider__img">
 					<img src="img/black_bugher.png" alt="" class="brg-img">
 				</div>
-				<div class="slider__details">								<div class="composition__elem">
+				<div class="slider__details"><div class="composition__elem">
 									<div class="composition__img"><img src="img/burger.png" alt=""></div>
-									<div class="composition__txt">Состав</div>
+									<div class="composition__txt">Состав
+										<div class="make__hover">
+											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make1.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Говядина</div>
+													<div class="make__txt-price">300 г</div>
+													</div>
+													</div>											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make2.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Булочки</div>
+													<div class="make__txt-price">100 г</div>
+													</div>
+													</div>											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make3.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Зелень</div>
+													<div class="make__txt-price">70 г</div>
+													</div>
+													</div>											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make4.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Соус</div>
+													<div class="make__txt-price">150 г</div>
+													</div>
+													</div>											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make5.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Овощи</div>
+													<div class="make__txt-price">200 г</div>
+													</div>
+													</div>											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make6.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Сыр</div>
+													<div class="make__txt-price">80 г</div>
+													</div>
+													</div>
+											</div>
+										</div>
 								</div>
 								<div class="kkal__elem">
 									<div class="kkal-img">
@@ -142,7 +188,52 @@
 				</div>
 				<div class="slider__details">								<div class="composition__elem">
 									<div class="composition__img"><img src="img/burger.png" alt=""></div>
-									<div class="composition__txt">Состав</div>
+									<div class="composition__txt">Состав
+										<div class="make__hover">
+											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make1.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Говядина</div>
+													<div class="make__txt-price">300 г</div>
+													</div>
+													</div>											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make2.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Булочки</div>
+													<div class="make__txt-price">100 г</div>
+													</div>
+													</div>											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make3.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Зелень</div>
+													<div class="make__txt-price">70 г</div>
+													</div>
+													</div>											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make4.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Соус</div>
+													<div class="make__txt-price">150 г</div>
+													</div>
+													</div>											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make5.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Овощи</div>
+													<div class="make__txt-price">200 г</div>
+													</div>
+													</div>											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make6.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Сыр</div>
+													<div class="make__txt-price">80 г</div>
+													</div>
+													</div>
+											</div></div>
 								</div>
 								<div class="kkal__elem">
 									<div class="kkal-img">
@@ -172,7 +263,52 @@
 				</div>
 				<div class="slider__details">								<div class="composition__elem">
 									<div class="composition__img"><img src="img/burger.png" alt=""></div>
-									<div class="composition__txt">Состав</div>
+									<div class="composition__txt">Состав
+										<div class="make__hover">
+											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make1.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Говядина</div>
+													<div class="make__txt-price">300 г</div>
+													</div>
+													</div>											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make2.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Булочки</div>
+													<div class="make__txt-price">100 г</div>
+													</div>
+													</div>											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make3.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Зелень</div>
+													<div class="make__txt-price">70 г</div>
+													</div>
+													</div>											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make4.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Соус</div>
+													<div class="make__txt-price">150 г</div>
+													</div>
+													</div>											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make5.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Овощи</div>
+													<div class="make__txt-price">200 г</div>
+													</div>
+													</div>											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make6.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Сыр</div>
+													<div class="make__txt-price">80 г</div>
+													</div>
+													</div>
+											</div></div>
 								</div>
 								<div class="kkal__elem">
 									<div class="kkal-img">
@@ -202,7 +338,52 @@
 				</div>
 				<div class="slider__details">								<div class="composition__elem">
 									<div class="composition__img"><img src="img/burger.png" alt=""></div>
-									<div class="composition__txt">Состав</div>
+									<div class="composition__txt">
+										<div class="make__hover">
+											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make1.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Говядина</div>
+													<div class="make__txt-price">300 г</div>
+													</div>
+													</div>											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make2.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Булочки</div>
+													<div class="make__txt-price">100 г</div>
+													</div>
+													</div>											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make3.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Зелень</div>
+													<div class="make__txt-price">70 г</div>
+													</div>
+													</div>											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make4.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Соус</div>
+													<div class="make__txt-price">150 г</div>
+													</div>
+													</div>											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make5.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Овощи</div>
+													<div class="make__txt-price">200 г</div>
+													</div>
+													</div>											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make6.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Сыр</div>
+													<div class="make__txt-price">80 г</div>
+													</div>
+													</div>
+											</div></div>
 								</div>
 								<div class="kkal__elem">
 									<div class="kkal-img">
@@ -232,7 +413,52 @@
 				</div>
 				<div class="slider__details">								<div class="composition__elem">
 									<div class="composition__img"><img src="img/burger.png" alt=""></div>
-									<div class="composition__txt">Состав</div>
+									<div class="composition__txt">Состав
+										<div class="make__hover">
+											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make1.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Говядина</div>
+													<div class="make__txt-price">300 г</div>
+													</div>
+													</div>											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make2.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Булочки</div>
+													<div class="make__txt-price">100 г</div>
+													</div>
+													</div>											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make3.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Зелень</div>
+													<div class="make__txt-price">70 г</div>
+													</div>
+													</div>											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make4.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Соус</div>
+													<div class="make__txt-price">150 г</div>
+													</div>
+													</div>											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make5.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Овощи</div>
+													<div class="make__txt-price">200 г</div>
+													</div>
+													</div>											<div class="make__row">
+												<div class="make__img">
+													<img src="img/make6.png" alt=""></div>
+												<div class="make__txt">
+													<div class="make__txt-name">Сыр</div>
+													<div class="make__txt-price">80 г</div>
+													</div>
+													</div>
+											</div></div>
 								</div>
 								<div class="kkal__elem">
 									<div class="kkal-img">
@@ -352,29 +578,29 @@
 	</div>
 	<div class="accordeon__menu">
 	<ul class="accordeon-menu__list">
-		<li class="accordeon-menu__elem">
-			<a href="#" class="accordeon-menu__btn" style="background-image: url(img/menu1bg.png);">
+		<li class="accordeon-menu__elem" id="black1">
+			<a href="#" class="accordeon-menu__btn" id="acordeon1" style="background-image: url(img/menu1bg.png);">
 				
 			
 				<div class="accordeon-menu__btn-txt">Для мясоедов</div>
 			</a>
-			<a href="#" class="accordeon-menu__content">
+			<a href="#" class="accordeon-menu__content" id="acc1Open">
 				<div class="accordeon-menu__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil incidunt alias optio enim cupiditate consequuntur magnam impedit doloremque. Tempore repellendus architecto ratione quasi id itaque fuga voluptates obcaecati sapiente, pariatur.</div>
 			</a>
 		</li>
-		<li class="accordeon-menu__elem">
+		<li class="accordeon-menu__elem" id="black2">
 			<a href="#" class="accordeon-menu__btn" style="background-image: url(img/menu2bg.png);">
 				<div class="accordeon-menu__btn-txt">Вегетарианское</div>
 			</a>
-			<a href="#" class="accordeon-menu__content">
+			<a href="#" class="accordeon-menu__content" id="acc2Open">
 				<div class="accordeon-menu__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil incidunt alias optio enim cupiditate consequuntur magnam impedit doloremque. Tempore repellendus architecto ratione quasi id itaque fuga voluptates obcaecati sapiente, pariatur.</div>
 			</a>
 		</li>
-		<li class="accordeon-menu__elem">
+		<li class="accordeon-menu__elem" id="black3">
 			<a href="#" class="accordeon-menu__btn" style="background-image: url(img/menu3bg.png);">
 				<div class="accordeon-menu__btn-txt">Диетическое</div>
 			</a>
-			<a href="#" class="accordeon-menu__content">
+			<a href="#" class="accordeon-menu__content" id="acc3Open">
 				<div class="accordeon-menu__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil incidunt alias optio enim cupiditate consequuntur magnam impedit doloremque. Tempore repellendus architecto ratione quasi id itaque fuga voluptates obcaecati sapiente, pariatur.</div>
 			</a>
 		</li>
@@ -629,6 +855,7 @@
 			</svg>
 		</a>
 	</div>
+</div>
 	<div class="send__true" id="trueMessage">
 		<div class="send__container">
 		<div class="send__true-message">Сообщение отправлено</div>
@@ -641,41 +868,33 @@
 			<button class="button__false" id="closeFBtn">Закрыть</button>
 		</div>
 	</div>
-	<div class="page__indicator">
-		<ul id="myMeny" class="data__menu">
-			<li data-menuanchor="home" class="data-menu active">
-				<a href="#home"><div class="data__circle"></div></a>	
-			</li>
-			<li data-menuanchor="info" class="data-menu active">
-					<a href="#info"><div class="data__circle"></div></a>
-				</li>
-				<li data-menuanchor="sliderPage" class="data-menu active">
-						<a href="#sliderPage"><div class="data__circle"></div></a>
-					</li>
-					<li data-menuanchor="teamPage" class="data-menu active">
-							<a href="#teamPage"><div class="data__circle"></div></a>
-						</li>
-						<li data-menuanchor="menuPage" class="data-menu active">
-								<a href="#menuPage"><div class="data__circle"></div></a>
-							</li>
-							<li data-menuanchor="commentPage" class="data-menu active">
-									<a href="#commentPage"><div class="data__circle"></div></a>
-								</li>
-								<li data-menuanchor="work" class="data-menu active">
-										<a href="#work"><div class="data__circle"></div></a>
-									</li>
-									<li data-menuanchor="location" class="data-menu active">
-											<a href="#location"><div class="data__circle"></div></a>
-										</li>
-		</ul>
-	</div>
+
+	<ul id="myMenu">
+		    <li class="nav_elem" data-menuanchor="home">
+			<a href="#home" class="nav__link" class></a></li>
+			<li class="nav_elem" data-menuanchor="info">
+			<a href="#info" class="nav__link"></a></li>
+			<li class="nav_elem" data-menuanchor="sliderPage">
+			<a href="#sliderPage" class="nav__link"></a></li>
+			<li class="nav_elem" data-menuanchor="teamPage">
+			<a href="#teamPage" class="nav__link"></a></li>
+			<li class="nav_elem" data-menuanchor="menuPage">
+			<a href="#menuPage" class="nav__link"></a></li>
+			<li class="nav_elem" data-menuanchor="commentPage">
+			<a href="#commentPage" class="nav__link"></a></li>
+			<li class="nav_elem" data-menuanchor="work">
+			<a href="#work" class="nav__link"></a></li>
+			<li class="nav_elem" data-menuanchor="buy">
+			<a href="#buy" class="nav__link"></a></li>
+			<li class="nav_elem" data-menuanchor="location">
+			<a href="#location" class="nav__link"></a></li>
+	</ul>
 
 	<script src="jquery.js"></script>
 	<script src="js/map.js"></script>
 	<script src="js/slick.js"></script>
 	<script src="js/fullpage.js"></script>
 	<script src="main.js"></script>
-</div>
 </body>
 </html>
 <!---->
