--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
 		Меню
 	</div>
 	<div class="accordeon__menu">
-	<ul class="accordeon-menu__list">
+	<ul class="accordeon-menu__list" id="accordeon">
 		<li class="accordeon-menu__elem" id="black1">
 			<a href="#" class="accordeon-menu__btn" id="acordeon1" style="background-image: url(img/menu1bg.png);">
 				
