--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
 					</div>
 
 			</li>
-						<li class="people__container" style="background-image: url(img/people_img2.jpg)">
+						<li class="people__container" style="background-image: url(img/people_img2.png)">
 				<div class="people__content" id="overlayContainer">
 					<div class="people__name">Константин Спилберг</div>
 					<div class="people__comment" id="pComent">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
