--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<li class="sidebar__elem"><div class="circle"></div></li>
 							<li class="sidebar__elem sidebar__elem_txt"><a href="#work">Как мы работаем</a></li>
 							<li class="sidebar__elem"><div class="circle"></div></li>
-							<li class="sidebar__elem sidebar__elem_txt"><a href="#location">Контакт</a></li>
+							<li class="sidebar__elem sidebar__elem_txt"><a href="#location">Контакты</a></li>
 							</ul>
 						</nav>
 						<div class="button button_header">
